<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wirelessuda</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_main_tab">新闻列表</string>
    <string name="title_activity_bus">BusActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_card">苏大一卡通服务</string>
    <string name="title_activity_cardindex">一卡通服务页面</string>
    <string name="title_activity_CardChangePass">一卡通密码修改</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_gateway">苏州大学网关登录</string>
    <string name="cardApplication">cardApplication</string>
    <string name="news">新闻</string>
    <string name="cardTitle">一卡通登录</string>
    <string name="cardAccountTV"> 学 号 ： </string>
	<string name="cardPassTV"> 密 码 ： </string>
	<string name="cardLogin"> 登 录 </string>
	<string name="cardAutoLogin"> 自 动 登 录 </string>
	<string name="cardLogout"> 退 出 </string>
	<string name="cardindex">苏大一卡通</string>
	<string name="cardindex_photo"></string>
	<string name="cardindex_tv1">姓 名 ：</string>
	<string name="cardindex_tv2">学 号 ：</string>
	<string name="cardindex_tv3">退出登录</string>
	<string name="cardindex_tv4"> 返 回 </string>
	<string name="cardindex_userInfo">详细信息</string>
	<string name="cardindex_userinfo_tv1">学 生 账 号 ：</string>
	<string name="cardindex_userinfo_tv2">学 生 学 号 ：</string>
	<string name="cardindex_userinfo_tv3">学 生 姓 名 ：</string>
	<string name="cardindex_userinfo_tv4">身 份 证 号 ：</string>
	<string name="cardindex_userinfo_tv5">学 生 类 型 ：</string>
	<string name="cardindex_userinfo_tv6">所 属 学 院 ：</string>
	<string name="cardindex_userinfo_tv7">学 生 民 族 ：</string>
	<string name="cardindex_userinfo_tv8">学 生 性 别 ：</string>
	<string name="cardindex_userinfo_tv9">一 卡 通 卡 号 ：</string>
	<string name="cardindex_changePass">密码修改</string>
	<string name="cardindex_queryBalance">消费查询</string>
	<string name="cardindex_lossReport">卡片挂失</string>
	<string name="changePass">修改密码</string>
	<string name="bindPhone">绑定手机</string>
	<string name="unbound">解除绑定</string>
	<string name="cardChangePassTV1"> 修 改 密 码 </string>
	<string name="cardindex_changepass_tv1"> 原 密 码 ： </string>
	<string name="cardindex_changepass_tv2"> 新 密 码 ： </string>
	<string name="cardindex_changepass_tv3">重复密码： </string>
	<string name="cardChangePassSubmit"> 确 认 修 改  </string>
</resources>