<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_unselected"
    tools:context=".CardActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="36dp"
        android:text="@string/cardPassTV"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/cardTitle"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="37dp"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/cardAccountTV"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/cardAccount"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView2"
        android:background="@drawable/button_unselected"
        android:hint="请输入学号"
        android:numeric="integer"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/cardPass"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/cardAccount"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:background="@drawable/button_unselected"
        android:hint="请输入密码"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/cardLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:background="@drawable/button"
        android:text="@string/cardLogin" />

    <CheckBox
        android:id="@+id/cardAutoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/cardAutoLogin" />

    <Button
        android:id="@+id/card_goback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button"
        android:padding="7dp"
        android:textSize="18sp"
   		android:textStyle="bold"
        android:text=" 返 回 " />

    <ProgressBar
        android:id="@+id/card_pb1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>